# crowdcontrol

./: .gitignore  .versionrc  Cargo.toml  README.md  RELEASE.md  SPEC.md  TESTING.md  cctb.zsh  cog.toml  config.example.toml  install.sh
.cargo/: config.toml
.github/workflows/: ci.yml  docker-build.yml  release.yml
container/: Dockerfile  entrypoint.sh  refresh-claude-auth.sh  setup-github-auth.sh  test-refresh-claude-auth.sh
crowdcontrol-cli/: Cargo.toml
crowdcontrol-cli/src/: main.rs  utils.rs
crowdcontrol-cli/src/commands/: completions.rs  connect.rs  doctor.rs  list.rs  logs.rs  mod.rs  new.rs  refresh.rs  remove.rs  start.rs  stop.rs
crowdcontrol-cli/tests/: claude_auth_integration_test.rs  claude_auth_test.rs  cli_test.rs  config_test.rs  failed_clone_test.rs  integration_test.rs  user_journey_test.rs  workspace_clone_test.rs
crowdcontrol-core/: Cargo.toml
crowdcontrol-core/container/: Dockerfile
crowdcontrol-core/src/: agent.rs  config.rs  docker.rs  github.rs  lib.rs  logger.rs  logger_tests.rs  settings.rs  state_validator.rs
crowdcontrol-core/tests/: agent_locking.rs  agent_status_tests.rs  claude_integration_test.rs  container_behavior_test.rs  docker_claude_tests.rs  github_advanced_tests.rs  github_auth_tests.rs  github_container_tests.rs  github_integration_test.rs  refresh_script_test.rs  state_validation.rs
docs/: github-app-setup.md  github-organization-setup.md
npm/: README.md  install.js  package.json  uninstall.js
