[workspace]
members = ["crowdcontrol-core", "crowdcontrol-cli"]
resolver = "2"

# Optimized release profile
[profile.release]
lto = "thin"
codegen-units = 1
panic = "abort"
strip = true

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Wade Fletcher <wade@tractorbeam.ai>"]
license = "MIT"

[workspace.dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
config = "0.14"
anyhow = "1.0"
dirs = "5.0"
bollard = "0.16"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
futures-util = "0.3"
fs2 = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "time", "local-time"] }
tracing-appender = "0.2"