[package]
name = "crowdcontrol-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Command-line interface for CrowdControl containerized development environments"
homepage = "https://github.com/wadefletch/crowdcontrol"
repository = "https://github.com/wadefletch/crowdcontrol"
keywords = ["docker", "development", "containers", "claude", "ai"]
categories = ["command-line-utilities", "development-tools"]
readme = "../README.md"
exclude = ["tests/fixtures/"]

[[bin]]
name = "crowdcontrol"
path = "src/main.rs"

[dependencies]
crowdcontrol-core = { path = "../crowdcontrol-core" }
clap = { version = "4.5", features = ["derive", "env", "cargo"] }
clap_complete = "4.5"
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
dirs = { workspace = true }
colored = "2.0"
indicatif = "0.17"
dialoguer = "0.11"
which = "6.0"
tracing = { workspace = true }
whoami = "1.5"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
tempfile = "3.0"
serde_json = { workspace = true }
uuid = { workspace = true }