[package]
name = "crowdcontrol-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Core library for CrowdControl container management"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
config = { workspace = true }
anyhow = { workspace = true }
dirs = { workspace = true }
bollard = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
futures-util = { workspace = true }
fs2 = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
libc = "0.2"

[dev-dependencies]
tempfile = "3.0"